# projeto_persistencia

./: LICENSE  README.md  main.py  pyproject.toml  schemas.py
csv/: publicacoes.csv
routers/: auxiliares.py  compactacao.py  hash.py  listar_publicacoes.py  publicacoes.py
